// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSlot tests Header and caption text render as expected 1`] = `
<View>
  <Text
    style={
      {
        "fontSize": 24,
        "fontWeight": "bold",
      }
    }
  >
    Header text
  </Text>
  <Text
    style={
      {
        "fontFamily": "Arial",
        "fontWeight": "200",
      }
    }
  >
    Caption text
  </Text>
</View>
`;

exports[`useSlot tests Multi-level text elements are equivalent 1`] = `
<Text
  style={
    {
      "fontFamily": "Arial",
      "fontSize": 24,
      "fontWeight": "bold",
    }
  }
>
  HeaderCaptionText
</Text>
`;

exports[`useSlot tests Multi-level text elements are equivalent 2`] = `
<Text
  style={
    {
      "fontFamily": "Arial",
      "fontSize": 24,
      "fontWeight": "bold",
    }
  }
>
  HeaderCaptionText
</Text>
`;

exports[`useSlot tests Two base text elements rendering, with and without styles 1`] = `
<View>
  <Text>
    No Style
  </Text>
  <Text
    style={
      {
        "color": "blue",
      }
    }
  >
    With Style
  </Text>
</View>
`;
